# Rotisserie

./: README.md  pyproject.toml
configs/: app.toml
rotisserie/: app.py  cli.py  config.py  info.py
static/styles/: animations.css  base.css  navbar.css  rotimgs.css
templates/: base.html  portion_filler.html  portion_root.html  portion_rot13_crypt.html  root.html
